Style the live filter and make sure that it...
only shows when the roster is overflowing. updates #212

--- a/less/converse.less
+++ b/less/converse.less
@@ -902,7 +902,7 @@ dl.add-converse-contact {
 }
 
 #conversejs .controlbox-pane dt {
-    padding: 3px;
+    padding-bottom: 3px;
 }
 
 #conversejs .chatroom-form-container {
@@ -981,13 +981,24 @@ dl.add-converse-contact {
 }
 
 #converse-roster {
-    overflow-y: auto;
-    overflow-x: hidden;
     width: 100%;
     position: relative;
     margin: 0.5em 0 0 0;
-    height: 254px;
-    height: ~"calc(100% - 70px)";
+    max-height: 194px;
+    max-height: ~"calc(100% - 25px)";
+}
+
+#converse-roster .roster-filter {
+    margin: 0 0.5em;
+    width: 182px;
+}
+
+#converse-roster .roster-contacts {
+    margin: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 195px;
+    height: ~"calc(100% - 67px)";
 }
 
 #converse-roster .group-toggle {
@@ -1063,7 +1074,7 @@ dl.add-converse-contact {
 }
 
 #conversejs dd.available-chatroom,
-#converse-roster dd {
+#conversejs #converse-roster dd {
     font-weight: bold;
     border: none;
     display: block;
